Rewrite and delete Attributes
Refactor ESLint configuration and Jest setup, update package versions

- Update ESLint configuration for Jest environment and parser options, include Jest plugins, and adjust ecmaVersion in ESLint. Update package versions and introduce Jest testing in package.json. Refactor route path from 'cube' to '3d' for improved clarity and consistency. Streamline async/await usage in CubeComponent for device/model loading. Implement error handling in device service. (Issue #123)

Refactor ESLint configuration, Jest setup, and update package versions

This commit refactors the ESLint configuration to include Jest environment and parser options, adds Jest plugins, and adjusts the ecmaVersion. It also updates package versions and introduces Jest testing in package.json. Additionally, the route path 'cube' is refactored to '3d' for improved clarity and consistency. The async/await usage in CubeComponent is streamlined to better handle device/model loading. Furthermore, error handling is implemented in the device service.

Issue #123

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,32 +31,13 @@
           <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"
             ><i class="bi bi-motherboard"></i> Models</a
           >
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"
-              >Attributes</a
-            >
-            <ul class="dropdown-menu">
-              <li>
-                <a
-                  class="dropdown-item"
-                  routerLink="/attribute-list"
-                  routerLinkActive="active"
-                  ariaCurrentWhenActive="page"
-                  ><i class="bi bi-bar-chart"></i> Attributes</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  routerLink="/attribute-dictionary-list"
-                  routerLinkActive="active"
-                  ariaCurrentWhenActive="page"
-                  ><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a
-                >
-              </li>
-            </ul>
-          </li>
+          <a
+            class="nav-link"
+            routerLink="/attribute-dictionary-list"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            ><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a
+          >
           <a class="nav-link" routerLink="/connection-list" routerLinkActive="active" ariaCurrentWhenActive="page"
             ><i class="bi bi-ethernet"></i> Connections</a
           >
