--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,50 +11,29 @@
     <header>
       <nav class="navbar navbar-expand-sm p-2">
         <div class="container-fluid nav nav-pills">
-          <a
-            class="navbar-brand nav-link"
-            id="title"
-            routerLink="/home"
-            routerLinkActive="active fluffy"
-            ariaCurrentWhenActive="page"
-            >3d inventory</a
-          >
-          <a class="nav-link" routerLink="/3d" routerLinkActive="active fluffy" ariaCurrentWhenActive="page"
-            ><i class="bi bi-box"></i> 3d</a
-          >
-          <a class="nav-link" routerLink="/floor-list" routerLinkActive="active" ariaCurrentWhenActive="page"
-            ><i class="bi bi-building"></i> Floors</a
-          >
-          <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"
-            ><i class="bi bi-hdd"></i> Devices</a
-          >
-          <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"
-            ><i class="bi bi-motherboard"></i> Models</a
-          >
-          <a
-            class="nav-link"
-            routerLink="/attribute-dictionary-list"
-            routerLinkActive="active"
-            ariaCurrentWhenActive="page"
+          <a class="navbar-brand nav-link" id="title" routerLink="/home" routerLinkActive="active fluffy" ariaCurrentWhenActive="page">3d inventory</a>
+          <a class="nav-link" routerLink="/3d" routerLinkActive="active fluffy" ariaCurrentWhenActive="page"><i class="bi bi-box"></i> 3d</a>
+          <a class="nav-link" routerLink="/floor-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-building"></i> Floors</a>
+          <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-hdd"></i> Devices</a>
+          <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-motherboard"></i> Models</a>
+          <a class="nav-link" routerLink="/attribute-dictionary-list" routerLinkActive="active" ariaCurrentWhenActive="page"
             ><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a
           >
           <a class="nav-link" routerLink="/connection-list" routerLinkActive="active" ariaCurrentWhenActive="page"
             ><i class="bi bi-ethernet"></i> Connections</a
           >
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"
-              >Users</a
-            >
+            <a class="nav-link dropdown-toggle disabled" data-bs-toggle="dropdown" href="#" role="button" aria-disabled="true" aria-expanded="false">Users</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Users</a></li>
-              <li><a class="dropdown-item" href="#">Roles</a></li>
-              <li><a class="dropdown-item" href="#">Permissions</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Users</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Roles</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Permissions</a></li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
-              <li><a class="dropdown-item" href="#">Login</a></li>
-              <li><a class="dropdown-item" href="#">Logout</a></li>
-              <li><a class="dropdown-item" href="#">Register</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Login</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Logout</a></li>
+              <li><a class="dropdown-item disabled" routerLinkActive="disabled" aria-disabled="true" href="#">Register</a></li>
             </ul>
           </li>
 
@@ -62,11 +41,7 @@
             <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
           </form>
           <div class="form-check form-switch">
-            <input
-              (click)="themeSwitch()"
-              class="form-check-input column-gap-2"
-              type="checkbox"
-              id="flexSwitchCheckDefault" />
+            <input (click)="themeSwitch()" class="form-check-input column-gap-2" type="checkbox" id="flexSwitchCheckDefault" />
             <label class="form-check-label" for="flexSwitchCheckDefault"><i class="bi bi-brightness-high"></i></label>
           </div>
         </div>
@@ -86,10 +61,7 @@
           </div>
         </div>
         <div class="col-8 text-center">
-          <a
-            class="btn btn-floating m-1 p-1"
-            role="button"
-            href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">
+          <a class="btn btn-floating m-1 p-1" role="button" href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">
             <i class="bi bi-github" style="font-size: 1.2rem; color: rgb(82, 90, 105)"></i>
           </a>
           <a class="btn btn-floating m-1 p-1" role="button" href="https://www.ultimasolution.pl/3d-inventory/">
