--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -3,30 +3,30 @@
   <form [formGroup]="form" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
       <div class="col">
-        <div class="form-group mb-3">
-          <label for="id" class="form-label">Id</label>
-          <input
-            type="text"
-            formControlName="id"
-            id="id"
-            required
-            readonly
-            [ngClass]="{
-              'is-invalid': this.form.controls.id.status !== 'VALID',
-              'is-valid': this.form.controls.id.status === 'VALID',
-              'form-control': true,
-            }"
-          />
-          <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
-            <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
-          </div>
+        <label for="id" class="form-label">Id</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="id"
+          aria-label="_id"
+          id="_id"
+          required
+          readonly
+          [ngClass]="{
+            'is-invalid': this.form.controls._id.status !== 'VALID',
+            'is-valid': this.form.controls._id.status === 'VALID',
+            'form-control': true,
+          }" />
+        <div *ngIf="this.form.controls._id.errors" class="invalid-feedback">
+          <div *ngIf="this.form.controls._id.errors.required">Id is required</div>
+          <div *ngIf="this.form.controls._id.errors.minlength">Id must be at least 4 characters</div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
           <textarea
+            class="form-control"
             [ngClass]="{
               'is-invalid': this.form.controls.name.status !== 'VALID',
               'is-valid': this.form.controls.name.status === 'VALID',
@@ -50,14 +50,14 @@
           <label for="type" class="form-label">Type</label>
           <select
             (change)="changeType($event)"
+            class="form-control"
             formControlName="type"
             [ngClass]="{
               'is-invalid': this.form.controls.type.status !== 'VALID',
               'is-valid': this.form.controls.type.status === 'VALID',
               'form-select': true,
             }"
-            id="type"
-          >
+            id="type">
             <option *ngFor="let typeObj of deviceTypeDict['list']; let i = index">
               {{ typeObj.name }}
             </option>
@@ -72,14 +72,14 @@
           <label for="category" class="form-label">Category</label>
           <select
             (change)="changeCategory($event)"
+            class="form-control"
             formControlName="category"
             [ngClass]="{
               'is-invalid': this.form.controls.category.status !== 'VALID',
               'is-valid': this.form.controls.category.status === 'VALID',
               'form-select': true,
             }"
-            id="category"
-          >
+            id="category">
             <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
               {{ categoryObj.name }}
             </option>
@@ -94,6 +94,7 @@
           <label for="component" class="form-label">Component</label>
           <select
             (change)="changeCategory($event)"
+            class="form-control"
             formControlName="component"
             [ngClass]="{
               'is-invalid': this.form.controls.component.status !== 'VALID',
@@ -103,8 +104,7 @@
             id="component"
             ngbPopover="Select where you want use this attribute"
             triggers="mouseenter:mouseleave"
-            popoverTitle="Range of use by components"
-          >
+            popoverTitle="Range of use by components">
             <option *ngFor="let componentObj of componentDictionary.list; let i = index">
               {{ componentObj.name }}
             </option>
