Enhances device form validation
Adds number validation for 'y' and 'h' fields in the device edit form
Updates version to 0.37.37

--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -99,7 +99,7 @@
             placeholder="h"
             required
             [ngClass]="{
-              'is-invalid': this.x?.status !== 'VALID',
+              'is-invalid': editDeviceForm.get('position')?.get('h')?.status !== 'VALID',
               'is-valid': editDeviceForm.get('position')?.get('h')?.status === 'VALID',
             }" />
         </div>
