--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,8 +52,8 @@
         <router-outlet></router-outlet>
       </div>
     </main>
-    <footer style="vertical-align: auto; margin-left: auto; margin-right: auto">
-      <div class="row" style="height: fit-content">
+    <footer style="vertical-align: bottom; margin-left: auto; margin-right: auto">
+      <div class="row" style="height: auto">
         <div class="col-9">
           <div class="p-2">
             © 2022-{{ currentYearLong() }} Copyright:
